--- a/MyBookStore.DAL/MyBookStore.DAL.csproj
+++ b/MyBookStore.DAL/MyBookStore.DAL.csproj
@@ -7,6 +7,8 @@
     <ItemGroup>
       <PackageReference Include="FluentValidation" Version="11.4.0" />
       <PackageReference Include="MediatR" Version="11.1.0" />
+      <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.17" />
+      <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="5.0.17" />
     </ItemGroup>
 
     <ItemGroup>
@@ -14,7 +16,7 @@
     </ItemGroup>
 
     <ItemGroup>
-      <Folder Include="Command\Impl" />
+      <Folder Include="Core" />
     </ItemGroup>
 
 </Project>
