--- a/MyBookStore.Common/MyBookStore.Common.csproj
+++ b/MyBookStore.Common/MyBookStore.Common.csproj
@@ -4,4 +4,12 @@
         <TargetFramework>net5.0</TargetFramework>
     </PropertyGroup>
 
+    <ItemGroup>
+      <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="5.0.0" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <ProjectReference Include="..\MyBookStore.DAL\MyBookStore.DAL.csproj" />
+    </ItemGroup>
+
 </Project>
