--- a/MyBookStore.DAL/MyBookStore.DAL.csproj
+++ b/MyBookStore.DAL/MyBookStore.DAL.csproj
@@ -16,7 +16,7 @@
     </ItemGroup>
 
     <ItemGroup>
-      <Folder Include="Core" />
+      <Folder Include="Core\IoC" />
     </ItemGroup>
 
 </Project>
