--- a/MyBookStore.BLL/MyBookStore.BLL.csproj
+++ b/MyBookStore.BLL/MyBookStore.BLL.csproj
@@ -4,4 +4,17 @@
         <TargetFramework>net5.0</TargetFramework>
     </PropertyGroup>
 
+    <ItemGroup>
+      <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.0" />
+      <PackageReference Include="MediatR" Version="11.1.0" />
+      <PackageReference Include="Microsoft.AspNetCore.Authentication.Core" Version="2.2.0" />
+      <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="5.0.17" />
+      <PackageReference Include="Microsoft.AspNetCore.Cryptography.KeyDerivation" Version="7.0.2" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <ProjectReference Include="..\MyBookStore.DAL\MyBookStore.DAL.csproj" />
+      <ProjectReference Include="..\MyBookStore.Domain\MyBookStore.Domain.csproj" />
+    </ItemGroup>
+
 </Project>
