--- a/MyBookStore.DAL/MyBookStore.DAL.csproj
+++ b/MyBookStore.DAL/MyBookStore.DAL.csproj
@@ -8,7 +8,7 @@
       <PackageReference Include="FluentValidation" Version="11.4.0" />
       <PackageReference Include="MediatR" Version="11.1.0" />
       <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.17" />
-      <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="5.0.17" />
+      <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="5.0.4" />
     </ItemGroup>
 
     <ItemGroup>
