--- a/MyBookStore/appsettings.json
+++ b/MyBookStore/appsettings.json
@@ -9,7 +9,7 @@
   "Jwt": {
     "Key": "6fhWB9W3aMDts7P",
     "Issuer": "www.996workers.icu",
-    "Audience": "http://localhost:8080/"
+    "Audience": "https://localhost:8081/"
   },
   "ConnectionStrings": {
     "mysql-default": "Server=localhost;Port=3306;User ID=root;Password=123456;Database=my_book_store"
