- fix: The encryption algorithm 'System.String' requires a key size of at least 'System.Int32' bits. Key 'Microsoft.IdentityModel.Tokens.SymmetricSecurityKey', is of size: 'System.Int32'. (Parameter 'key')

--- a/MyBookStore/appsettings.json
+++ b/MyBookStore/appsettings.json
@@ -7,7 +7,7 @@
     }
   },
   "Jwt": {
-    "Key": "6fhWB9W3aMDts7P",
+    "Key": "HKirwUB9EfPHxNonCbqCRQxTeU24iYHB",
     "Issuer": "www.996workers.icu",
     "Audience": "https://localhost:8081/"
   },
